# supercooldemo

./: .gitignore  manage.py  pyproject.toml  requirements.txt
rockstar/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html
